--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Bad%20Script"> 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/illuminati.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -33,7 +34,7 @@
     <div id="root"></div>
     
         
-        <script>
+        <!-- <script>
         let c = document.getElementById("c");
         let ctx = c.getContext("2d");
 
@@ -73,7 +74,7 @@
 
         setInterval(draw, 100);
 
-        </script>
+        </script> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
