--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Bad%20Script"> 
+    
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat"> 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/illuminati.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
